--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.9.0",
     "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "next": "14.2.13",
     "next-auth": "^4.24.8",
     "next-themes": "^0.3.0",
