--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^2.1.8",
     "@hookform/resolvers": "^3.9.0",
+    "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
     "framer-motion": "^11.9.0",
@@ -23,6 +24,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
+    "react-redux": "^9.1.2",
     "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.4",
     "zod": "^3.23.8"
