--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev -p 5000",
     "build": "next build",
     "start": "next start -p 5000",
+    "dev-and-start": "concurrently \"npm run dev\" \"cd .. && cd backend && npm start\"",
     "lint": "next lint"
   },
   "dependencies": {
@@ -34,6 +35,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "concurrently": "^9.1.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.13",
     "postcss": "^8",
